--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,7 +1,1 @@
-/**
- * Basic typography style for copy text
- */
-body {
-  color: $text-color;
-  font: normal 125% / 1.4 $text-font-stack;
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap');
