--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,7 +3,6 @@
 // 1. Configuration and helpers
 @import
   'abstracts/variables',
-  'abstracts/functions',
   'abstracts/mixins';
 
 // 2. Vendors
@@ -13,23 +12,16 @@
 // 3. Base stuff
 @import
   'base/base',
-  'base/fonts',
-  'base/typography',
-  'base/helpers';
+  'base/typography';
 
 // 4. Layout-related sections
 @import
-  'layout/header',
-  'layout/footer';
+  'layout/navigations';
 
 // 5. Components
 @import
-  'components/button';
+  'components/profile-buttons',
+  'components/banner',
+  'components/profile',
+  'components/gallery';
 
-// 6. Page-specific styles
-@import
-  'pages/home';
-
-// 7. Themes
-@import
-  'themes/default';
